# bitblit

./: .gitignore  CMakeLists.txt  Makefile
src/include/: log.h  main.h
src/main/: log.c  main.c
